# codestash

./: README.md  meson.build
data/: Application.css  gresource.xml  gschema.xml  launcher.desktop  meson.build
src/: Application.vala  Application.vala~  MainWindow.vala  MainWindow.vala~
src/Widgets/: StashSummary.vala
